# SF.AI

./: .env.example  .gitignore  Makefile  NEXT_AGENT_PROMPT.md  PROJECT_PRINCIPLES.md  README.md  SETUP_STATUS.md  docker-compose.yml  pyproject.toml
artifacts/: README.md
data/: README.md
docs/: AGENT_ENGINEERING_RULES.md  AGENT_HANDOFF.md  AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  CORPUS_GOVERNANCE.md  CORPUS_OPERATIONAL_FILTER_REPORT.md  CURRENT_GOALS.md  DATASET_FORMAT.md  DATASET_GOVERNANCE.md  DATA_IMPROVEMENT_LOOP.md  DIALOGUE_DATASET_RUBRIC.md  ENGINEERING_RULES.md  EVALUATION_PLAN.md  EXECUTION_PLAN.md  GENERATIVE_ROADMAP.md  LANGUAGE_SEGMENTATION.md  LANGUAGE_UNDERSTANDING.md  LEXICON_STATS.md  PHASE12_PREFLIGHT_REPORT.md  PHASE12_TOKENIZER_V1_REPORT.md  PHASE13_SMOKE_TRAINING_REPORT.md  PHASE14_SF10M_V0_1_REPORT.md  PHASE15_GENERATOR_ADAPTER_REPORT.md  PHASE17_RAG_BRIDGE_REPORT.md  PHASE19_READINESS_REPORT.md  PHASE20_DOMAIN_ACTIVATION_GATES_REPORT.md  PHASE22_GOLD_DIALOGUE_CORPUS_V2_REPORT.md  PHASE23_TOKENIZER_V2_REPORT.md  PHASE24_SF10M_V0_2_REPORT.md  PHASE25_GENERATED_CHAT_CANARY_REPORT.md  PHASE26_SF50M_READINESS_REPORT.md  PHASE27_100_BOUNDED_TOPIC_BINDING_REPAIR_REPORT.md  PHASE27_101_TOPIC_BINDING_RESULT_DIAGNOSIS_REPORT.md  PHASE27_102_TOPIC_PROTOTYPE_CONTRASTIVE_GATE_REPORT.md  PHASE27_103_TOPIC_PROTOTYPE_CONTRASTIVE_CURRICULUM_PACK_REPORT.md  PHASE27_104_BOUNDED_TOPIC_PROTOTYPE_CONTRASTIVE_REPAIR_REPORT.md  PHASE27_105_RAW_UI_LAB_RESULT_DIAGNOSIS_REPORT.md  PHASE27_106_SOCIAL_SUBFAMILY_TOPIC_VARIANT_DESIGN_REPORT.md  PHASE27_107_SOCIAL_SUBFAMILY_TOPIC_VARIANT_GATE_REPORT.md  PHASE27_108_SOCIAL_SUBFAMILY_TOPIC_VARIANT_DATA_PACK_REPORT.md  (+133 more)
scripts/: README.md  audit_tokenization_policy.py  audit_training_corpus.py  build_dialogue_split.py  check_env.sh  filter_training_forbidden_corpus.py  (+146 more)
(+853 files in other folders)
